--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
       - crm_network
 
   mysql:
-    image: mysql:8.0.39
+    image: mysql:8.0.39attachments
     container_name: crm_mysql
     environment:
       MYSQL_ROOT_PASSWORD: root_password
